--- a/styles/fifth-section.css
+++ b/styles/fifth-section.css
@@ -1,7 +1,10 @@
 .fifth-section {
-    margin-top: 30px;
+    width: 100%;
+    height: 100vh;
+    margin-top: 2%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -17,25 +20,51 @@
 
 .project-div {
     width: 60%;
+    height: 80vh;
     color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 40px;
+    margin-top: 2%;
 }
 
-.project {
-    position: relative;
+.project1 {
+    background-image: url(../images/many-envs.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: end;
+    justify-content: start;
 }
 
-.project-image {
-    width: 100%;
+.project2 {
+    background-image: url(../images/little-ice.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+}
+
+.project3 {
+    background-image: url(../images/strawberries.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+}
+
+.project4 {
+    background-image: url(../images/envelope.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: end;
+    justify-content: start;
 }
 
 .project-info {
-    position: absolute;
-    left: 40px;
-    right: 40px;
-    bottom: 20px;
-    text-align: start;
-    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    color: white;
 }
