--- a/styles/first-section.css
+++ b/styles/first-section.css
@@ -1,30 +1,20 @@
-.image1 {
-    width: 1300px;
-    height: 700px;
-    object-fit: cover;
-}
-
-body {
-    font-style: italic;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
 .first-section {
-    position: relative;
+    height: 100vh; 
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .position {
-    position: absolute;
-    bottom: 250px;
+    position: relative;
     width: 100%;
+    height: 100vh;
 }
 
-.display {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.myimage {
+    width: 100%;
+    height: 100vh;
 }
 
 .heading1 {
@@ -45,16 +35,30 @@ body {
     transition: all 0.5s;
 }
 
-.menu {
-    position: absolute;
-    top: 5px;
-    right: 30px;
-}
-
 .menu-icon {
     width: 70px;
 }
 
 .button1:hover {
     transform: scale(1.2);
+}
+
+.display {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+
+.menu {
+    position: absolute;
+    height: 100vh;
+    width: 95%;
+    display: flex;
+    justify-content: end;
+    align-items: start;
 }
