--- a/styles/sixth-section.css
+++ b/styles/sixth-section.css
@@ -1,15 +1,19 @@
 .sixth-section {
     background-color: blue;
-    width: 1300px;
-    height: 350px;
-    margin-top: 20px;
-    position: relative;
+    width: 100%;
+    height: 50vh;
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons-position {
-    position: absolute;
     width: 100%;
-    top: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons-title {
@@ -26,6 +30,7 @@
 .click-button {
     background-color: white;
     color: black;
+    padding: 15px 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 15px;
